Fix #110426: render hanging when drawing metadata in the image editor

Release must be called regardless if the returned image buffer pointer
is null.

Pull Request: https://projects.blender.org/blender/blender/pulls/110985